apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: ClusterIP
  ports:
  - name: jellyfin
    port: 8096
    protocol: TCP
    targetPort: 8096
  - name: jellyfin-client-discovery
    port: 7359
    protocol: UDP
    targetPort: 7359
  - name: jellyfin-service-discovery
    port: 1900
    protocol: UDP
    targetPort: 1900
  selector:
    app: jellyfin
